2001-10-12  Alexander V. Lukyanov <lav@yars.free.net>

	* complete.cc: add > to remote completion status.
	* ftpclass.cc: don't add ./ to CWD in extreme case when PWD is not
	  absolute.
	* misc.cc: (dir_file) don't return NULL if possible.

2001-10-10  Glenn F. Maynard <g_ld@zewt.org>

	* StatusLine.cc, StatusLine.h, Time.cc, Time.h, complete.cc:

	added ms constructor for time; this gives us a free cast from int to
	Time, which means all of the ms operations can away (they're implicit.)

	Defined negative time values more clearly (in comments).  This usually
	doesn't matter.

	Fixed Time.h indentation.

2001-10-10  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc: (LocalFile) don't set name if already set. This fixes
	  LocalAccess' ListInfo and mirror.
	* PollVec.cc: treat AddTimeout(negative) as AddTimeout(0).

2001-10-09  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h, FileAccess.cc: more home_auto fixes;
	  SameLocationAs returns true even if o->home is null.

2001-10-09  Glenn F. Maynard <g_ld@zewt.org>

	* Time.cc, Time.h, commands.cc, complete.cc, StatusLine.cc, StatusLine.h,
	misc.cc, misc.h:

	Time and Timer classes in Time.{cc,h}.  Implemented only a
	couple operators; add others as required.  This can probably be fairly
	widely-used; I didn't implement it anywhere else, though.  It doesn't
	cast to anything; that just causes problems.

	Disabled short help for: rels renlist reget reput

	added references: [re]ls, [re]nlist, [re]get, [re]cls, [re]put
	Help is down to 23 lines (from 25.)  How about changing help to use
	ColumnOutput?  That might cut it down further.  (Due to the length of
	some short help, it might not, though--not on an 80x25, anyway.)

	Updated [c]ls help; it was too long.

	(xgettimeofday) new function. (cmd:status-interval) new setting.

2001-10-08  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fix site command broken by ls changes.